# TENSTAR_st7789v

./: LICENSE  README.md  pyproject.toml  setup.py
TENSTAR_st7789v/: __init__.py  st7789v.py
TENSTAR_st7789v.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: example.py  example2.py  example_multiline.py  example_scroll.py
